# pyanyzip

./: .gitignore  .myenv  .mypy.ini  README.md  README.rst  pyanyzip.py  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
.github/workflows/: build.yml
config/: github.py  project.py  python.py
doc/: links.txt
pyanyzip/: core.py  static.py
src/: pyanyzip.py
src/pyanyzip/: core.py  static.py
templates/: pyproject.toml.mako
tests/unit_tests/: test_all.py
