[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanyzip"
version = "0.0.24"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pyanyzip is a module to help with dealing with compressed files transparently"
readme = "README.md"
license = "MIT"
keywords=[
    "python",
    "zip",
    "bz2",
    "gzip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pypipegzip",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyanyzip"
"Bug Tracker" = "https://github.com/veltzer/pyanyzip/issues"
"Documentation" = "https://veltzer.github.io/pyanyzip"
"Download" = "https://pypi.org/project/pyanyzip/"
"Repository" = "https://github.com/veltzer/pyanyzip"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyanyzip"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyanyzip/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
